--- a/index.html
+++ b/index.html
@@ -2,15 +2,25 @@
 <html>
  <head>
    <meta charset="utf-8">
-   <title>Hello</title>
+   <title>Моя личная страничка</title>
    </head>
    <body>
-   
-   
-   Hello world!
-   
-   
-   </body>
-   </html>
-   
+    <left><h1>Карл Великий</h1></left>
+    <left><img alt="Это я" width="15%" src="me.jpg"> </left> 
+    <br/>
+    <h2>Контакты:</h2>
+    Страничка <a href=https://https://vk.com/sabiyoung/>vkontakte</a>
+     <br/>
+    Страничка <a href=https://github.com/Sabina01-soba>Github</a>
+    <br/>
+    Телефон: <b>+79518771402</b>
+    <br/>
+    E-mail:<i>gasymova.sabinka@mail.ru</i>
+ 
+    </body>
+    </html>
+
+ 
+    
+  
    
